# jitacart

./: .env.example  .env.staging.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOY.md  PLAN.md  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: CLAUDE.md  Cargo.toml  Dockerfile  SECURITY.md  config.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: auth.rs  citadels.rs  config.rs  contracts.rs  corps.rs  crypto.rs  db.rs  errors.rs  extract.rs  fulfillment.rs  groups.rs  jwt.rs  lib.rs  lists.rs  main.rs  markets.rs  state.rs  turnstile.rs  webhooks.rs
backend/crates/api/src/fulfillment/: claims.rs  fulfillments.rs  reimbursements.rs  runs.rs  tips.rs
backend/crates/api/src/lists/: crud.rs  detail.rs  items.rs  pricing.rs
backend/crates/api/tests/: abuse_caps.rs  active_character.rs  contracts.rs  data_export.rs  list_archive.rs  phase8.rs  rls_enforcement.rs  tenant_isolation.rs  webhooks.rs
backend/crates/auth-tokens/: Cargo.toml
backend/crates/auth-tokens/src/: budget.rs  cipher.rs  lib.rs  store.rs
backend/crates/auth-tokens/tests/: reencrypt_stale.rs
backend/crates/bootstrap/: Cargo.toml
backend/crates/bootstrap/src/: lib.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs  multibuy.rs  principals.rs
backend/crates/market/: Cargo.toml
backend/crates/market/src/: lib.rs  prices.rs  types.rs
backend/crates/settlement/: Cargo.toml
backend/crates/settlement/src/: lib.rs
backend/crates/settlement/tests/: settle_manual.rs  settle_via_contract.rs  unbind_contract.rs
backend/crates/settlement/tests/common/: mod.rs
backend/crates/webhook-dispatch/: Cargo.toml
backend/crates/webhook-dispatch/src/: lib.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: main.rs
backend/crates/worker/src/jobs/: citadel_details.rs  citadel_discovery.rs  citadel_orders.rs  contracts.rs  contracts_common.rs  corp_contracts.rs  corp_wallet.rs  csa.rs  mod.rs  npc_hubs.rs  pending_webhooks.rs  token_reencrypt.rs  webhooks.rs
backend/crates/worker/src/jobs/contracts/: match.rs
backend/migrations/: 20260427000000_init.sql  20260427010000_phase1_auth.sql  20260427020000_phase2_groups.sql  20260429000000_phase3_lists_and_markets.sql  20260514000000_backup_role_and_scoped_grants.sql  20260601000000_phase4_citadels.sql  20260701000000_phase5_fulfillment.sql  20260702000000_phase5_indexes.sql  20260801000000_phase6_contracts.sql  20260901000000_phase6_indexes.sql  20261001000000_phase7_corps.sql  20261001000001_contract_source_corp.sql  20261001000002_ambassador_group_scope.sql  20261101000000_phase8_polish.sql  20261201000000_phase9_token_kid.sql
backup/: Dockerfile  RESTORE.md  backup.sh  entrypoint.sh  rclone.conf.example  restore.sh
caddy/conf.d/: staging.caddy.example
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: CitadelSearchModal.svelte  api.ts
frontend/src/lib/components/: EmptyState.svelte  Skeleton.svelte
frontend/src/lib/lists/: BuyModal.svelte  ClaimChips.svelte  DeleteConfirmModal.svelte  MarketPicker.svelte  ReimbursementPanel.svelte
frontend/src/lib/stores/: activeCharacter.ts  me.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/(authed)/: +layout.server.ts  +layout.svelte  +layout.ts
frontend/src/routes/(authed)/groups/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/contracts/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/corps/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/corps/[corp_id]/journal/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/lists/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/lists/new/: +page.server.ts  +page.svelte
frontend/src/routes/(authed)/groups/[id]/runs/: +page.svelte
frontend/src/routes/(authed)/groups/[id]/tracked-markets/: +page.svelte
frontend/src/routes/(authed)/lists/[id]/: +page.svelte
frontend/src/routes/(authed)/me/: +page.svelte
frontend/src/routes/g/join/[code]/: +page.svelte
frontend/src/routes/groups/: +page.svelte
frontend/src/routes/groups/[id]/: +page.svelte
frontend/src/routes/groups/[id]/lists/new/: +page.svelte
frontend/src/routes/groups/[id]/runs/: +page.svelte
frontend/src/routes/groups/[id]/tracked-markets/: +page.svelte
frontend/src/routes/lists/[id]/: +page.svelte
frontend/src/routes/me/: +page.svelte
frontend/src/routes/privacy/: +page.svelte
scripts/: bump-image-digests.sh  check-env-example.sh  deploy.sh  init-roles.sh  install-git-hooks.sh
scripts/git-hooks/: pre-commit
