[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/worker",
    "crates/domain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# db
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# config
figment = { version = "0.10", features = ["toml", "env"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "2"

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# internal
domain = { path = "crates/domain" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
