[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/worker",
    "crates/domain",
    "crates/market",
    "crates/auth-tokens",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# db
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "rust_decimal",
] }

# decimals (ISK columns)
rust_decimal = { version = "1", features = ["serde"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# config
figment = { version = "0.10", features = ["toml", "env"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "2"

# misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# auth / crypto
nea-esi = "0.7"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
jsonwebtoken = "10"
aes-gcm = "0.10"
secrecy = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2", "charset"] }
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"
url = "2"
time = "0.3"

# internal
domain = { path = "crates/domain" }
market = { path = "crates/market" }
auth-tokens = { path = "crates/auth-tokens" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
