[package]
name = "jitacart-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jitacart-api"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
market = { workspace = true }
rust_decimal = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

figment = { workspace = true }

futures-util = "0.3"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

nea-esi = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
jsonwebtoken = { workspace = true }
aes-gcm = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
time = { workspace = true }
