[package]
name = "jitacart-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "jitacart_api"
path = "src/lib.rs"

[[bin]]
name = "jitacart-api"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
market = { workspace = true }
auth-tokens = { workspace = true }
bootstrap = { workspace = true }
jitacart-config = { workspace = true }
settlement = { workspace = true }
webhook-dispatch = { workspace = true }
rust_decimal = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }

# Auto-instrumented Prometheus exposition: request count / latency /
# in-flight per route, no handler edits. Recorder + axum layer.
# `metrics-exporter-prometheus` is pulled in transitively but we list
# it explicitly so the `PrometheusHandle` type isn't smuggled in
# through a private re-export.
axum-prometheus = "0.10"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

futures-util = "0.3"

tracing = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

nea-esi = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
jsonwebtoken = { workspace = true }
aes-gcm = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
time = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
