[package]
name = "auth-tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "auth_tokens"
path = "src/lib.rs"

[dependencies]
domain = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }

nea-esi = { workspace = true }

tracing = { workspace = true }

dashmap = "6"

[dev-dependencies]
tokio = { workspace = true }
