[package]
name = "market"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
domain = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
anyhow = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

nea-esi = { workspace = true }
futures-util = "0.3"
