[package]
name = "jitacart-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jitacart-worker"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
market = { workspace = true }
auth-tokens = { workspace = true }
settlement = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
futures-util = "0.3"
rand = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }

serde = { workspace = true }
secrecy = { workspace = true }

figment = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }

uuid = { workspace = true }

nea-esi = { workspace = true }
