[package]
name = "jitacart-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jitacart-worker"
path = "src/main.rs"

[dependencies]
domain = { workspace = true }
market = { workspace = true }
auth-tokens = { workspace = true }
bootstrap = { workspace = true }
jitacart-config = { workspace = true }
settlement = { workspace = true }
webhook-dispatch = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }

# Worker has no axum middleware chain (no per-request metrics), so we
# use the lower-level `metrics` crate directly for custom counters
# (job ticks, ESI budget, etc.) and expose them via the Prometheus
# exporter on the existing healthz listener.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
futures-util = "0.3"
rand = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }

serde = { workspace = true }
secrecy = { workspace = true }

tracing = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }

uuid = { workspace = true }

nea-esi = { workspace = true }
reqwest = { workspace = true }
